Visitor and adminssion

--- a/admin-login.html
+++ b/admin-login.html
@@ -169,7 +169,7 @@
                 // User is already logged in, redirect to dashboard
                 showSuccess('Already logged in! Redirecting...');
                 setTimeout(() => {
-                    window.location.href = 'admin-dashboard.html';
+                    window.location.href = 'index.html';
                 }, 1000);
             }
         });
@@ -209,7 +209,7 @@
                 
                 // Redirect to dashboard
                 setTimeout(() => {
-                    window.location.href = 'admin-dashboard.html';
+                    window.location.href = 'index.html';
                 }, 1500);
                 
             } catch (error) {
