--- a/admin-login.html
+++ b/admin-login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discovery Admin Login</title>
+    <title>Demo Admin Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -34,7 +34,7 @@
                 <div class="w-16 h-16 bg-white/20 rounded-2xl flex items-center justify-center mb-6 backdrop-blur-sm">
                     <i class="fas fa-graduation-cap text-3xl"></i>
                 </div>
-                <h1 class="text-4xl md:text-5xl font-bold mb-4">Discovery Pathway</h1>
+                <h1 class="text-4xl md:text-5xl font-bold mb-4">Demo </h1>
                 <p class="text-lg md:text-xl text-purple-100 mb-8">Admin Portal</p>
                 <div class="space-y-4">
                     <div class="flex items-center space-x-3">
@@ -77,7 +77,7 @@
                         id="emailInput" 
                         required
                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none input-focus transition"
-                        placeholder="admin@discovery.com"
+                        placeholder="admin@demo.com"
                     >
                 </div>
 
